--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div onmouseover="myH1_tag()" onmouseleave="myH1_Tag()">
-		<h1 id="demo">Make your chosse!</h1>
+		<h1 id="demo">Make your choice!</h1>
 	</div>
 
     
